tests/errors/continue_compilation_walrus.f90
program continue_compilation_walrus
    implicit none
    integer :: x
    x := 5
    y := 5
    y := 10
end program
